tests/specs/graph/fast_check/return_inference/multiple_value_return_err.txt
~~ {"workspaceFastCheck":true} ~~
# workspace_members
[
  {
    "base": "file:///",
    "nv": "@scope/a@1.0.0",
    "exports": {
      ".": "./mod.ts"
    }
  }
]

# mod.ts
export const a = () => {
  if (globalThis) return 1;
  return 2;
}

export const b = function() {
  if (globalThis) return 1;
  return 2;
}

export function c() {
  if (globalThis) return 1;
  return 2;
}

export class D {
  d() {
    if (globalThis) return 1;
    return 2;
  }
}

// TODO: we don't support this at all
// export const e = {
//   e() {
//     if (globalThis) return 1;
//     return 2;
//   }
// };

// TODO: we don't support this at all
// export const f = class {
//   f() {
//     if (globalThis) return 1;
//     return 2;
//   }
// };

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "size": 557,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    }
  ],
  "redirects": {}
}

Fast check file:///mod.ts:
  error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /mod.ts:1:14
    |
  1 | export const a = () => {
    |              ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type

  error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /mod.ts:6:14
    |
  6 | export const b = function() {
    |              ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type

  error[missing-explicit-return-type]: missing explicit return type in the public API
    --> /mod.ts:11:17
     |
  11 | export function c() {
     |                 ^ this function is missing an explicit return type
     = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type

  error[missing-explicit-return-type]: missing explicit return type in the public API
    --> /mod.ts:17:3
     |
  17 |   d() {
     |   ^ this function is missing an explicit return type
     = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type

